# Codex-Manager

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.en.md  README.md
.github/actions/build-tauri-with-retry/: action.yml
.github/actions/prepare-frontend-dist/: action.yml
.github/actions/publish-github-release/: action.yml
.github/actions/setup-release-env/: action.yml
.github/actions/stage-service-package/: action.yml
.github/actions/validate-release-version/: action.yml
.github/workflows/: docker-ghcr.yml  docker-publish.yml  release-all.yml
apps/: AGENTS.md  next.config.ts  package.json  pnpm-lock.yaml
apps/src-tauri/: Cargo.toml  tauri.conf.json
apps/src-tauri/src/: lib.rs  updater.rs
apps/src/ui/: theme.js
crates/docker/: Dockerfile.web
crates/service/: Cargo.toml
crates/start/: Cargo.toml
crates/start/src/: main.rs
crates/web/: Cargo.toml  build.rs
docker/: Dockerfile.service  Dockerfile.web  docker-compose.yml
docs/: README.md
docs/plan/: 20260310094449707_service治理待办.md  20260319195028315_Codex对齐会话语义与自动切换设计.md
docs/release/: 20260309195355216_发布与产物说明.md  20260310122606851_构建发布与脚本说明.md
docs/report/: 20260309195355187_环境变量与运行配置说明.md  20260310094449707_service治理阶段报告.md  20260310122606850_运行与部署指南.md  20260310122606852_FAQ与账号命中规则.md  20260319214500000_当前网关与Codex官方请求参数对照表.md
scripts/: rebuild-linux.sh  rebuild-macos.sh  rebuild.ps1
scripts/release/: assert-release-version.ps1
scripts/tests/: assert-release-version.test.ps1  chat_tools_hit_probe.ps1  gateway_regression_suite.ps1  gateway_regression_suite.test.ps1
(+315 files in other folders)
