[package]
name = "codexmanager-start"
version.workspace = true
edition = "2021"

[dependencies]
ctrlc = "3"
webbrowser = "0.8"
codexmanager-service = { path = "../service" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_JobObjects"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
